--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a songwriter, record producer, performer, and guest lecturer at James Madison University's Music Industry program. I was a signed touring musician right out of college. I also worked for Apple as a technician, software trainer, and internal onboarding factilitator.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Richmond, Virginia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Songwriting, music production and technology, coding, being a dog dad, reading, collecting vinyl, Washington Capitals hockey, developing an active lifestyle, catching up with friends local and afar.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Hit Songwriter!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Richmond, Virginia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Like many, my industry was hit pretty hard by the COVID-19 pandemic. I decided that I needed to make a career transition and since I love to create things, I started teaching myself front-end technologies online. I found that I really enjoyed working with code and that a lot of the skills I had developed in my previous career were applicable to programming and computational thinking!</p>
     </section>
 
     <footer id="footer">
