Updated introduction details

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I'm a songwriter, record producer, performer, and guest lecturer for James Madison University's Music Industry program. I also worked for Apple for a few years as a technician, software trainer, and internal onboarding factilitator.</p>
+      <p>I'm a songwriter, record producer, performer. I deeply value sharing knowledge and guest lecture once a semester at James Madison University to music industry students. I also mentor young artists, songwriters, and producers around Virginia. I worked for Apple for a few years as a technician, software trainer, and internal onboarding factilitator. Now I'm excited to be growing into a new developer!</p>
       <h1>Where I'm From</h1>
       <p>Richmond, Virginia</p>
       <h1>What are your favorite hobbies?</h1>
