--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I'm a songwriter, record producer, performer. I deeply value sharing knowledge and guest lecture once a semester at James Madison University to music industry students. I also mentor young artists, songwriters, and producers around Virginia. I worked for Apple for a few years as a technician, software trainer, and internal onboarding factilitator. Now I'm excited to be growing into a new developer!</p>
+      <p>I'm a songwriter, record producer, performer. I deeply value sharing knowledge and I guest lecture to music industry students at James Madison University once a semester. I also mentor young artists, songwriters, and producers around Virginia. I worked for Apple for a few years as a technician, software trainer, and internal onboarding factilitator. I'm excited to start this new challenge of learning web development.</p>
       <h1>Where I'm From</h1>
       <p>Richmond, Virginia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Songwriting, music production and technology, coding, being a dog dad, reading, collecting vinyl, Washington Capitals hockey, practicing an active lifestyle, catching up with friends local and afar.</p>
+      <p>Songwriting, music production and technology, coding, being a dog dad, reading, collecting vinyl, Washington Capitals hockey, fitness, and catching up with friends!</p>
       <h1>What's your dream job?</h1>
       <p>Hit Songwriter!</p>
       <h1>Where do you live?</h1>
       <p>Richmond, Virginia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>The music industry was hit pretty hard by the COVID-19 pandemic. While continuing to work with artists remotely, I decided that I needed to learn new skills to make a career transition. Since I love to create things, I started teaching myself HTML, CSS, and JavaScript using platforms like Codecademy and Udemy. I found that I really enjoyed working with code and that a lot of the skills I had developed in my previous career were applicable to programming and computational thinking! I'm excited to continue this new journey and see where it leads.</p>
+      <p>The music industry was hit pretty hard by the COVID-19 pandemic. While continuing to work with artists remotely, I decided that I needed to learn new skills to make a career transition and regain some stability. Since I love to create things, I started teaching myself HTML, CSS, and JavaScript using Codecademy and video courses on Udemy. I found that I really enjoyed working with code and that a lot of the skills I had developed in my previous career were applicable to programming and computational thinking. I'm excited to continue this new journey and see where it leads!</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/jxhnkndl">Github</a></li>
         </ul>
     </footer>
 </body>
