--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I'm a songwriter, record producer, performer. I deeply value sharing knowledge and I guest lecture to music industry students at James Madison University once a semester. I also mentor young artists, songwriters, and producers around Virginia. I worked for Apple for a few years as a technician, software trainer, and internal onboarding factilitator. I'm excited to start this new challenge of learning web development.</p>
+      <p>I'm a songwriter, record producer, and performer. I deeply value sharing knowledge and I guest lecture to music industry students at James Madison University once a semester. I also mentor young artists, songwriters, and producers around Virginia. I worked for Apple for a few years as a technician, technology trainer, and internal training and onboarding factilitator. I'm excited to start this new challenge of learning web development!</p>
       <h1>Where I'm From</h1>
       <p>Richmond, Virginia</p>
       <h1>What are your favorite hobbies?</h1>
